--- a/DotNetMicroservice/Catalog.Api/appsettings.Development.json
+++ b/DotNetMicroservice/Catalog.Api/appsettings.Development.json
@@ -2,7 +2,8 @@
   "DatabaseSettings": {
     "ConnectionString": "mongodb://catalogdb:27017",
     "DatabaseName": "CatalogDb",
-    "CollectionName": "Products"
+    "CollectionName": "Products",
+    "CategoryCollection": "Categories"
   },
   "Logging": {
     "LogLevel": {
